fix: safari overflow

--- a/src/themes/main.scss
+++ b/src/themes/main.scss
@@ -5,6 +5,7 @@ body {
 
     .ant-layout {
         background: #fff;
+        overflow-x: hidden;
     }
 
     .anticon svg {
